[tool.poetry]
name = "qdon-prefetch"
version = "0.1.0"
description = ""
authors = ["Jeong Arm <kjwonmail@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
"Mastodon.py" = "^1.5.1"
requests = "^2.22.0"
get-docker-secret = "^1.0.1 !=1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
